praecepta-sql-parser/src/main/java/io/praecepta/sql/antlr/parser/SimpleSQLParser.java
// Generated from SimpleSQL.g4 by ANTLR 4.5
package io.praecepta.sql.antlr.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, STRING=11, CREATE=12, SELECT=13, FROM=14, INSERT=15, UPDATE=16, 
		EXECUTE=17, INTO=18, VALUES=19, WHERE=20, NULL=21, WITH=22, HAVING=23, 
		DELETE=24, DOT=25, COMMA=26, ASTERISK=27, LEFT_PARENTHESIS=28, RIGHT_PARENTHESIS=29, 
		EQUALS=30, NOT=31, MINUS=32, PLUS=33, GT=34, GE=35, LT=36, LE=37, NE=38, 
		AND=39, OR=40, QUOTED_STRING=41, INTEGER_VALUE=42, DECIMAL_VALUE=43, IDENTIFIER=44, 
		XMLATTR=45, NUMBER=46, WS=47;
	public static final int
		RULE_sql = 0, RULE_statementQuery = 1, RULE_insert_statement = 2, RULE_update_statement = 3, 
		RULE_execute_statment = 4, RULE_delete_statement = 5, RULE_tableIdentifier = 6, 
		RULE_inputExpr = 7, RULE_identifier = 8, RULE_columnNames = 9, RULE_columnValues = 10, 
		RULE_havingKeyValExpr = 11, RULE_havingConditionList = 12, RULE_havingCondition = 13, 
		RULE_executeExprIdentifier = 14, RULE_executeExpressionList = 15, RULE_executeExpression = 16, 
		RULE_constant = 17, RULE_jsonExpression = 18, RULE_xmlExpression = 19, 
		RULE_xmlContent = 20, RULE_jsonObject = 21, RULE_pair = 22, RULE_jsonArr = 23, 
		RULE_value = 24, RULE_select_statement = 25, RULE_expressionList = 26, 
		RULE_expression = 27, RULE_conditionExpression = 28, RULE_compare = 29;
	public static final String[] ruleNames = {
		"sql", "statementQuery", "insert_statement", "update_statement", "execute_statment", 
		"delete_statement", "tableIdentifier", "inputExpr", "identifier", "columnNames", 
		"columnValues", "havingKeyValExpr", "havingConditionList", "havingCondition", 
		"executeExprIdentifier", "executeExpressionList", "executeExpression", 
		"constant", "jsonExpression", "xmlExpression", "xmlContent", "jsonObject", 
		"pair", "jsonArr", "value", "select_statement", "expressionList", "expression", 
		"conditionExpression", "compare"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'/'", "'true'", "'false'", "'null'", "'{'", "'}'", "':'", 
		"'['", "']'", null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "'.'", "','", "'*'", "'('", "')'", "'='", "'!'", 
		"'-'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, "STRING", 
		"CREATE", "SELECT", "FROM", "INSERT", "UPDATE", "EXECUTE", "INTO", "VALUES", 
		"WHERE", "NULL", "WITH", "HAVING", "DELETE", "DOT", "COMMA", "ASTERISK", 
		"LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", "EQUALS", "NOT", "MINUS", "PLUS", 
		"GT", "GE", "LT", "LE", "NE", "AND", "OR", "QUOTED_STRING", "INTEGER_VALUE", 
		"DECIMAL_VALUE", "IDENTIFIER", "XMLATTR", "NUMBER", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpleSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimpleSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SqlContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SimpleSQLParser.EOF, 0); }
		public List<StatementQueryContext> statementQuery() {
			return getRuleContexts(StatementQueryContext.class);
		}
		public StatementQueryContext statementQuery(int i) {
			return getRuleContext(StatementQueryContext.class,i);
		}
		public SqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).enterSql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).exitSql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleSQLVisitor ) return ((SimpleSQLVisitor<? extends T>)visitor).visitSql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlContext sql() throws RecognitionException {
		SqlContext _localctx = new SqlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sql);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(62);
				switch (_input.LA(1)) {
				case SELECT:
				case INSERT:
				case UPDATE:
				case EXECUTE:
				case DELETE:
					{
					setState(60);
					statementQuery();
					}
					break;
				case T__0:
					{
					setState(61);
					match(T__0);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(64); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << SELECT) | (1L << INSERT) | (1L << UPDATE) | (1L << EXECUTE) | (1L << DELETE))) != 0) );
			setState(66);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementQueryContext extends ParserRuleContext {
		public Insert_statementContext insert_statement() {
			return getRuleContext(Insert_statementContext.class,0);
		}
		public Update_statementContext update_statement() {
			return getRuleContext(Update_statementContext.class,0);
		}
		public Select_statementContext select_statement() {
			return getRuleContext(Select_statementContext.class,0);
		}
		public Execute_statmentContext execute_statment() {
			return getRuleContext(Execute_statmentContext.class,0);
		}
		public Delete_statementContext delete_statement() {
			return getRuleContext(Delete_statementContext.class,0);
		}
		public StatementQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).enterStatementQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).exitStatementQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleSQLVisitor ) return ((SimpleSQLVisitor<? extends T>)visitor).visitStatementQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementQueryContext statementQuery() throws RecognitionException {
		StatementQueryContext _localctx = new StatementQueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statementQuery);
		try {
			setState(73);
			switch (_input.LA(1)) {
			case INSERT:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				insert_statement();
				}
				break;
			case UPDATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				update_statement();
				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				select_statement();
				}
				break;
			case EXECUTE:
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				execute_statment();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 5);
				{
				setState(72);
				delete_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Insert_statementContext extends ParserRuleContext {
		public TerminalNode INSERT() { return getToken(SimpleSQLParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(SimpleSQLParser.INTO, 0); }
		public TableIdentifierContext tableIdentifier() {
			return getRuleContext(TableIdentifierContext.class,0);
		}
		public InputExprContext inputExpr() {
			return getRuleContext(InputExprContext.class,0);
		}
		public Insert_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insert_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).enterInsert_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).exitInsert_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleSQLVisitor ) return ((SimpleSQLVisitor<? extends T>)visitor).visitInsert_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Insert_statementContext insert_statement() throws RecognitionException {
		Insert_statementContext _localctx = new Insert_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_insert_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(INSERT);
			setState(76);
			match(INTO);
			setState(77);
			tableIdentifier();
			setState(78);
			inputExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Update_statementContext extends ParserRuleContext {
		public TerminalNode UPDATE() { return getToken(SimpleSQLParser.UPDATE, 0); }
		public TableIdentifierContext tableIdentifier() {
			return getRuleContext(TableIdentifierContext.class,0);
		}
		public InputExprContext inputExpr() {
			return getRuleContext(InputExprContext.class,0);
		}
		public Update_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_update_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).enterUpdate_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).exitUpdate_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleSQLVisitor ) return ((SimpleSQLVisitor<? extends T>)visitor).visitUpdate_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Update_statementContext update_statement() throws RecognitionException {
		Update_statementContext _localctx = new Update_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_update_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(UPDATE);
			setState(81);
			tableIdentifier();
			setState(82);
			inputExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Execute_statmentContext extends ParserRuleContext {
		public TerminalNode EXECUTE() { return getToken(SimpleSQLParser.EXECUTE, 0); }
		public TableIdentifierContext tableIdentifier() {
			return getRuleContext(TableIdentifierContext.class,0);
		}
		public HavingKeyValExprContext havingKeyValExpr() {
			return getRuleContext(HavingKeyValExprContext.class,0);
		}
		public ExecuteExprIdentifierContext executeExprIdentifier() {
			return getRuleContext(ExecuteExprIdentifierContext.class,0);
		}
		public Execute_statmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_execute_statment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).enterExecute_statment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).exitExecute_statment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleSQLVisitor ) return ((SimpleSQLVisitor<? extends T>)visitor).visitExecute_statment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Execute_statmentContext execute_statment() throws RecognitionException {
		Execute_statmentContext _localctx = new Execute_statmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_execute_statment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(EXECUTE);
			setState(85);
			tableIdentifier();
			setState(86);
			havingKeyValExpr();
			setState(87);
			executeExprIdentifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Delete_statementContext extends ParserRuleContext {
		public TerminalNode DELETE() { return getToken(SimpleSQLParser.DELETE, 0); }
		public TableIdentifierContext tableIdentifier() {
			return getRuleContext(TableIdentifierContext.class,0);
		}
		public HavingKeyValExprContext havingKeyValExpr() {
			return getRuleContext(HavingKeyValExprContext.class,0);
		}
		public Delete_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delete_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).enterDelete_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).exitDelete_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleSQLVisitor ) return ((SimpleSQLVisitor<? extends T>)visitor).visitDelete_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Delete_statementContext delete_statement() throws RecognitionException {
		Delete_statementContext _localctx = new Delete_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_delete_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(DELETE);
			setState(90);
			tableIdentifier();
			setState(91);
			havingKeyValExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableIdentifierContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TableIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).enterTableIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).exitTableIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleSQLVisitor ) return ((SimpleSQLVisitor<? extends T>)visitor).visitTableIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableIdentifierContext tableIdentifier() throws RecognitionException {
		TableIdentifierContext _localctx = new TableIdentifierContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tableIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputExprContext extends ParserRuleContext {
		public ColumnNamesContext columnNames() {
			return getRuleContext(ColumnNamesContext.class,0);
		}
		public TerminalNode VALUES() { return getToken(SimpleSQLParser.VALUES, 0); }
		public ColumnValuesContext columnValues() {
			return getRuleContext(ColumnValuesContext.class,0);
		}
		public TerminalNode WITH() { return getToken(SimpleSQLParser.WITH, 0); }
		public TerminalNode LEFT_PARENTHESIS() { return getToken(SimpleSQLParser.LEFT_PARENTHESIS, 0); }
		public JsonExpressionContext jsonExpression() {
			return getRuleContext(JsonExpressionContext.class,0);
		}
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(SimpleSQLParser.RIGHT_PARENTHESIS, 0); }
		public InputExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).enterInputExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).exitInputExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleSQLVisitor ) return ((SimpleSQLVisitor<? extends T>)visitor).visitInputExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputExprContext inputExpr() throws RecognitionException {
		InputExprContext _localctx = new InputExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_inputExpr);
		try {
			setState(104);
			switch (_input.LA(1)) {
			case LEFT_PARENTHESIS:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				columnNames();
				setState(96);
				match(VALUES);
				setState(97);
				columnValues();
				}
				break;
			case WITH:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				match(WITH);
				setState(100);
				match(LEFT_PARENTHESIS);
				setState(101);
				jsonExpression();
				setState(102);
				match(RIGHT_PARENTHESIS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(SimpleSQLParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(SimpleSQLParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(SimpleSQLParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(SimpleSQLParser.DOT, i);
		}
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleSQLVisitor ) return ((SimpleSQLVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_identifier);
		try {
			setState(115);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(IDENTIFIER);
				setState(107);
				match(DOT);
				setState(108);
				match(IDENTIFIER);
				setState(109);
				match(DOT);
				setState(110);
				match(IDENTIFIER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(IDENTIFIER);
				setState(112);
				match(DOT);
				setState(113);
				match(IDENTIFIER);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnNamesContext extends ParserRuleContext {
		public TerminalNode LEFT_PARENTHESIS() { return getToken(SimpleSQLParser.LEFT_PARENTHESIS, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(SimpleSQLParser.RIGHT_PARENTHESIS, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SimpleSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpleSQLParser.COMMA, i);
		}
		public ColumnNamesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnNames; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).enterColumnNames(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).exitColumnNames(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleSQLVisitor ) return ((SimpleSQLVisitor<? extends T>)visitor).visitColumnNames(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnNamesContext columnNames() throws RecognitionException {
		ColumnNamesContext _localctx = new ColumnNamesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_columnNames);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(LEFT_PARENTHESIS);
			setState(118);
			identifier();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(119);
				match(COMMA);
				setState(120);
				identifier();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			match(RIGHT_PARENTHESIS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnValuesContext extends ParserRuleContext {
		public TerminalNode LEFT_PARENTHESIS() { return getToken(SimpleSQLParser.LEFT_PARENTHESIS, 0); }
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(SimpleSQLParser.RIGHT_PARENTHESIS, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SimpleSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpleSQLParser.COMMA, i);
		}
		public ColumnValuesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnValues; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).enterColumnValues(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleSQLListener ) ((SimpleSQLListener)listener).exitColumnValues(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleSQLVisitor ) return ((SimpleSQLVisitor<? extends T>)visitor).visitColumnValues(this);
			else return visitor.visitChildren(this);
		}
	}
